# htmlrewriter

./: Cargo.toml  LICENSE  README.md  build-and-test  deno.json
.github/workflows/: test.yml
pkg/: README.md  htmlrewriter.d.ts  htmlrewriter_bg.js  htmlrewriter_bg.wasm  htmlrewriter_bg.wasm.d.ts
scripts/: build.ts
src/: comment.rs  doctype.rs  document_end.rs  element.rs  end_tag.rs  handlers.rs  html_rewriter.rs  index.ts  lib.rs  text_chunk.rs  types.d.ts
test/: comments.test.ts  doctype.test.ts  document_end.test.ts  element.test.ts  misc.test.ts  selectors.test.ts  text_chunk.test.ts
