[package]
name = "htmlrewriter"
edition = "2018"

[dependencies]
js-sys = "0.3.72"
lol_html = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.74"
thiserror = "2.0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--enable-bulk-memory"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
